# lab_os

./: .gitignore  README.md
lab1/: CMakeLists.txt
lab1/report/: 211_Антыгин_Лаб1.odt
lab1/src/: child1.c  child2.c  parent.c
lab2/: README.md
lab2/report/: 211_Антыгин_Лаб2.odt
lab2/src/: main.c
lab3/: README.md
lab3/report/: 211_Антыгин_Лаб3.odt
lab3/src/: child1.c  child2.c  parent.c
